--- a/paper_repo/main_analyses.Rmd
+++ b/paper_repo/main_analyses.Rmd
@@ -185,69 +185,6 @@ preprocessed_data_dir <- "preprocessed_data/"
 fig_dir <- "figs/"
 ```
 
-
-# Plot stimuli
-```{r}
-df_stim <- read.csv(paste0(data_dir, "models/lot.csv")) %>%
-           distinct(tpt, true_x, true_y, seq_id)
-lims <- df_stim %>%
-  group_by(seq_id) %>%
-  summarize(xmin = min(true_x),
-            xmax = max(true_x),
-            ymin = min(true_y),
-            ymax = max(true_y),
-            .groups = "drop") %>%
-  rowwise() %>%
-  mutate(xrange = xmax - xmin,
-        yrange = ymax - ymin,
-        maxrange = max(xrange, yrange),
-        xmid = (xmin + xmax)/2,
-        ymid = (ymin + ymax)/2,
-        xmin = xmid - maxrange/2,
-        xmax = xmid + maxrange/2,
-        ymin = ymid - maxrange/2,
-        ymax = ymid + maxrange/2)
-
-plot_func <- function(f, lw) {
-  lim <- lims %>% filter(seq_id == f)
-  ggplot(df_stim %>% filter(seq_id == f)) +
-    geom_path(aes(x = true_x, y = true_y), linetype = "dotted") +
-    geom_point(aes(x = true_x, y = true_y, alpha = tpt)) +
-    paper_theme +
-    theme(axis.text.x  = element_blank(),
-          axis.title.x = element_blank(),
-          axis.title.y = element_blank(),
-          axis.text.y  = element_blank(),
-          axis.line.x  = element_blank(), 
-          axis.line.y  = element_blank(), 
-          panel.border = element_rect(linewidth=lw, color="black"),
-          strip.text = element_blank()) +
-    coord_fixed(xlim = c(lim$xmin, lim$xmax),
-                ylim = c(lim$ymin, lim$ymax),
-                ratio = 1) +
-    guides(alpha = "none")
-}
-
-plots <- list()
-func_order <- c("line", "stairs", "stairs_2", "square_spiral", "alternating_diff_2", "square_2", "alternating_diff_1", "123",
-                "radial_1", "zigzag_widening", "hourglass_1", "zigzag_1", "3_pts", "sine", "plus", "decreasing_y",
-                "triangle_1", "increasing_lines", "zigzag_3", "f_curly_2", "spiral_outward", "zigzag_2", "hexagon", "radial_increasing")
-i=0
-for (f in func_order) {
-  i=i+1
-  if (i%%8==0) {
-    lw = 1
-  } else {
-    lw= 0.1
-  }
-  plots[[length(plots) + 1]] <- plot_func(f, lw) + theme(plot.margin = margin(0.01, 0.01, 0.01, 0.01, "in"))
-}
-
-p <- grid.arrange(grobs=plots, nrow=3)
-ggsave(paste0(fig_dir, "stimuli.png"), p, width=8, height=3)
-```
-
-
 # Monkey training, preprocessing
 ```{r}
 
@@ -370,6 +307,80 @@ df_monkey_test <- preprocess_df_monkey(read.csv(paste0(data_dir,  "participants/
 
 
 df_all <- bind_rows(df_adult, df_monkey_test, df_kid)
+```
+
+# Plot stimuli
+```{r}
+df_stim <- read.csv(paste0(data_dir, "models/lot.csv")) %>%
+           distinct(tpt, true_x, true_y, seq_id)
+
+unique_kid_patterns <- df_kid %>%
+  distinct(func.name) %>%
+  anti_join(df_adult %>% distinct(func.name), by = "func.name") %>%
+  pull(func.name)
+
+kid_accuracy_order <- df_kid %>%
+  group_by(func.name) %>%
+  summarise(mean_accuracy = -mean(correct, na.rm = TRUE)) %>%
+  arrange(mean_accuracy) %>%
+  pull(func.name)
+
+# Build facet order with kid-only patterns appended at the end
+unique_kid_patterns <- unique_kid_patterns[!is.na(unique_kid_patterns)]
+shared_order <- kid_accuracy_order[!(kid_accuracy_order %in% unique_kid_patterns)]
+facet_order <- unique(c(shared_order, unique_kid_patterns))
+
+lims <- df_stim %>%
+  group_by(seq_id) %>%
+  summarize(xmin = min(true_x),
+            xmax = max(true_x),
+            ymin = min(true_y),
+            ymax = max(true_y),
+            .groups = "drop") %>%
+  rowwise() %>%
+  mutate(xrange = xmax - xmin,
+        yrange = ymax - ymin,
+        maxrange = max(xrange, yrange),
+        xmid = (xmin + xmax)/2,
+        ymid = (ymin + ymax)/2,
+        xmin = xmid - maxrange/2,
+        xmax = xmid + maxrange/2,
+        ymin = ymid - maxrange/2,
+        ymax = ymid + maxrange/2)
+
+plot_func <- function(f, lw) {
+  lim <- lims %>% filter(seq_id == f)
+  ggplot(df_stim %>% filter(seq_id == f)) +
+    geom_path(aes(x = true_x, y = true_y), linetype = "dotted") +
+    geom_point(aes(x = true_x, y = true_y, alpha = tpt)) +
+    paper_theme +
+    theme(axis.text.x  = element_blank(),
+          axis.title.x = element_blank(),
+          axis.title.y = element_blank(),
+          axis.text.y  = element_blank(),
+          axis.line.x  = element_blank(), 
+          axis.line.y  = element_blank(), 
+          panel.border = element_rect(linewidth=lw, color="black"),
+          strip.text = element_blank()) +
+    coord_fixed(xlim = c(lim$xmin, lim$xmax),
+                ylim = c(lim$ymin, lim$ymax),
+                ratio = 1) +
+    guides(alpha = "none")
+}
+
+plots <- list()
+func_order <- facet_order
+for (f in func_order) {
+  if (f %in% unique_kid_patterns) {
+    lw = 1
+  } else {
+    lw= 0.1
+  }
+  plots[[length(plots) + 1]] <- plot_func(f, lw) + theme(plot.margin = margin(0.01, 0.01, 0.01, 0.01, "in"))
+}
+
+p <- grid.arrange(grobs=plots, nrow=3)
+ggsave(paste0(fig_dir, "stimuli.png"), p, width=8, height=3)
 ```
 
 # Compute overall and final timepoint accuracy by agent 
@@ -836,3 +847,329 @@ for (x in 3:7) {
 
 ```
 
+
+# Plot learning curves
+########################
+
+# Example predictions from each group
+```{r, fig.width=5,fig.height=5}
+plot_preds_single_group <- function(func_name, timepoint, group_name, rng = 0.25) {
+  
+  df_func_only_human <- df_adult %>% 
+    filter(func.name == func_name) %>%
+    group_by(func.name, tpt) %>%
+    slice(1) %>%
+    filter(tpt <= timepoint) %>%
+    ungroup() %>%
+    arrange(tpt)
+  
+  
+  df_func_only_monkey <- df_monkey_test %>% 
+    filter(func.name == func_name) %>%
+    group_by(func.name, tpt) %>%
+    slice(1) %>%
+    filter(tpt <= timepoint) %>%
+    ungroup() %>%
+    arrange(tpt)
+  
+  if (nrow(df_func_only_human) > 0 && nrow(df_func_only_monkey) > 0) {
+    human_min_x <- min(df_func_only_human$true_x)
+    human_max_x <- max(df_func_only_human$true_x)
+    human_min_y <- min(df_func_only_human$true_y)
+    human_max_y <- max(df_func_only_human$true_y)
+    human_range_x <- human_max_x - human_min_x
+    human_range_y <- human_max_y - human_min_y
+    
+    monkey_min_x <- min(df_func_only_monkey$true_x)
+    monkey_max_x <- max(df_func_only_monkey$true_x)
+    monkey_min_y <- min(df_func_only_monkey$true_y)
+    monkey_max_y <- max(df_func_only_monkey$true_y)
+    monkey_range_x <- monkey_max_x - monkey_min_x
+    monkey_range_y <- monkey_max_y - monkey_min_y
+  } else {
+    return(NULL)
+  }
+  
+  # Get predictions based on group
+  if (group_name == "adult") {
+    preds <- df_adult %>% 
+      filter(func.name == func_name, tpt == timepoint) %>%
+      select(pred_x, pred_y, tpt)
+    color_val <- "#59ab9d"
+  } else if (group_name == "kid_3") {
+    preds <- df_kid %>% 
+      filter(func.name == func_name, tpt == timepoint, floor(age) %in% c(3)) %>%
+      select(pred_x, pred_y, tpt)
+    color_val <- "#b876ae"  # lighter purple
+  } else if (group_name == "kid_3-4") {
+    preds <- df_kid %>% 
+      filter(func.name == func_name, tpt == timepoint, floor(age) %in% c(3,4)) %>%
+      select(pred_x, pred_y, tpt)
+    color_val <- "#b876ae"  
+  } else if (group_name == "kid_4-7") {
+    preds <- df_kid %>% 
+      filter(func.name == func_name, tpt == timepoint, floor(age) %in% c(4,5,6,7)) %>%
+      select(pred_x, pred_y, tpt)
+    color_val <- "#75073c"  # darker purple
+  }else if (group_name == "kid_5-7") {
+    preds <- df_kid %>% 
+      filter(func.name == func_name, tpt == timepoint, floor(age) %in% c(5,6,7)) %>%
+      select(pred_x, pred_y, tpt)
+    color_val <- "#75073c"  # darker purple
+  } else if (group_name == "monkey") {
+    # Transform monkey predictions to human coordinate system
+    preds <- df_monkey_test %>% 
+      filter(func.name == func_name, tpt == timepoint) %>%
+      mutate(
+        pred_x = if(monkey_range_x > 0) human_min_x + (pred_x - monkey_min_x) * human_range_x / monkey_range_x else human_min_x + human_range_x/2,
+        pred_y = if(monkey_range_y > 0) human_min_y + (pred_y - monkey_min_y) * human_range_y / monkey_range_y else human_min_y + human_range_y/2
+      ) %>%
+      select(pred_x, pred_y, tpt)
+    color_val <- "#ad9e26"
+  } else {
+    return(NULL)
+  }
+  # Use human coordinate system for plot bounds (consistent across all plots)
+  min_x <- min(df_func_only_human$true_x)
+  max_x <- max(df_func_only_human$true_x) 
+  min_y <- min(df_func_only_human$true_y)
+  max_y <- max(df_func_only_human$true_y)
+  range_x <- max_x - min_x
+  range_y <- max_y - min_y
+  range_xy <- max(range_x, range_y)
+  
+  df_func_only_human <- df_func_only_human %>% filter(tpt < timepoint)
+  df_func_only_monkey <- df_func_only_monkey %>% filter(tpt < timepoint)
+
+  # Create the plot
+  p <- ggplot() +
+    # Plot the true function path up to timepoint (using human coordinates)
+    geom_path(data = df_func_only_human, aes(x=true_x, y=true_y), size=0.4, color="black") +
+    geom_point(data=subset(df_func_only_human, df_func_only_human$tpt < timepoint - 1), aes(x=true_x, y=true_y, alpha = tpt), size=3.5, color="black") +
+    geom_point(data=subset(df_func_only_human, df_func_only_human$tpt < timepoint - 1), aes(x=true_x, y=true_y), size=1.5, color="white") +
+
+    geom_text(data=subset(df_func_only_human, df_func_only_human$tpt == timepoint - 1), aes(x=true_x, y=true_y), size=5, label="★", hjust=0.6, vjust=0.5)
+
+  if (group_name == "kid_4-7") {
+    alpha_val <- 0.25
+    
+  } else if (group_name == "kid_3") {
+    alpha_val <- 0.45
+  } else {
+    alpha_val <- 0.35
+  }
+  
+  p <- p +
+    geom_point(data=preds, aes(x=pred_x, y=pred_y),
+               color=color_val, size=2, alpha=alpha_val*2, shape = 1) +
+    geom_point(data=preds, aes(x=pred_x, y=pred_y),
+               color=color_val, size=2, alpha=alpha_val, stroke=0.1) +
+    guides(alpha="none")
+
+  p <- p +
+    coord_cartesian(xlim=c(min_x - range_xy * rng, max_x + range_xy * rng), 
+                    ylim=c(min_y - range_xy * rng, max_y + range_xy * rng)) +
+    theme_void() + 
+    theme(plot.background = element_rect(fill = "white", color = NA),
+          panel.background = element_rect(fill = "white", color = NA))
+  
+  return(p)
+}
+
+
+common_patterns <- Reduce(union, list(
+  unique(df_adult$func.name),
+  unique(df_kid$func.name),
+  unique(df_monkey_test$func.name)
+))
+
+
+#if (!dir.exists("figs/func_predictions_tpt")) {
+#  dir.create("figs/func_predictions_tpt", recursive = TRUE)
+#}
+
+for (func in common_patterns) {
+  max_n_adult <- if (any(df_adult$func.name == func)) max(df_adult$tpt[df_adult$func.name == func], na.rm = TRUE) else NA_real_
+  max_n_kid <- if (any(df_kid$func.name == func)) max(df_kid$tpt[df_kid$func.name == func], na.rm = TRUE) else NA_real_
+  max_n_monkey <- if (any(df_monkey_test$func.name == func)) max(df_monkey_test$tpt[df_monkey_test$func.name == func], na.rm = TRUE) else NA_real_
+  max_all <- suppressWarnings(max(c(max_n_adult, max_n_kid, max_n_monkey), na.rm = TRUE))
+  max_tpt <- min(14, max_all)
+
+  if (!is.finite(max_tpt) || max_tpt < 2) {
+    next
+  }
+
+  for (tpt in 2:max_tpt) {
+    groups <- c("adult", "monkey", "kid_3", "kid_4-7")
+    for (group in groups) {
+      p <- plot_preds_single_group(func, tpt, group, 0.8)
+      if (!is.null(p)) {
+        filename <- paste0("figs/func_predictions_tpt/", func, "_", tpt, "_", group, ".png")
+        #ggsave(plot=p, filename, width=2, height=2, dpi=500, bg="white")
+      }
+    }
+  }
+}
+
+```
+
+
+```{r, fig.width=15, fig.height=5, warning=FALSE}
+common_patterns <- Reduce(intersect, list(
+  unique(df_adult$func.name),
+  unique(df_kid$func.name),
+  unique(df_monkey_test$func.name)
+))
+
+df_adult_filtered <- df_adult #%>% filter(func.name %in% common_patterns)
+df_kid_filtered <- df_kid# %>% filter(func.name %in% common_patterns)
+df_monkey_test_filtered <- df_monkey_test #%>% filter(func.name %in% common_patterns)
+
+unique_kid_patterns <- df_kid %>%
+  distinct(func.name) %>%
+  anti_join(df_adult %>% distinct(func.name), by = "func.name") %>%
+  pull(func.name)
+
+pattern_df <- preprocess_df_children(read.csv(paste0(data_dir, "participants/kids.csv"))) %>%
+  group_by(func.name, tpt) %>%
+  summarise(true_x = mean(true_x),
+            true_y = mean(true_y)) %>%
+  group_by(func.name) %>%
+  mutate(
+    xrng = max(true_x) - min(true_x),
+    yrng = max(true_y) - min(true_y),
+    range_xy = max(xrng, yrng)
+  ) %>%
+  mutate(
+    true_x_norm = ifelse(xrng > 0, (true_x - min(true_x))/xrng, 0.5),
+    true_y_norm = ifelse(yrng > 0, (true_y - min(true_y))/(0.3*xrng + 0.7*yrng), 0.5),
+    true_y_norm = true_y_norm - mean(true_y_norm)
+  )
+
+kid_accuracy_order <- df_kid_filtered %>%
+  group_by(func.name) %>%
+  summarise(mean_accuracy = -mean(correct, na.rm = TRUE)) %>%
+  arrange(mean_accuracy) %>%
+  pull(func.name)
+
+# Build facet order with kid-only patterns appended at the end
+unique_kid_patterns <- unique_kid_patterns[!is.na(unique_kid_patterns)]
+shared_order <- kid_accuracy_order[!(kid_accuracy_order %in% unique_kid_patterns)]
+facet_order <- unique(c(shared_order, unique_kid_patterns))
+
+df_adult_filtered <- df_adult_filtered %>%
+  mutate(func.name = factor(func.name, levels = facet_order))
+
+df_kid_filtered <- df_kid_filtered %>%
+  mutate(func.name = factor(func.name, levels = facet_order))
+
+df_kid_3_filtered <- df_kid_filtered %>%
+    filter(age < 4)
+
+df_kid_47_filtered <- df_kid_filtered %>%
+    filter(age >= 4)
+
+df_monkey_test_filtered <- df_monkey_test_filtered %>%
+  mutate(func.name = factor(func.name, levels = facet_order))
+
+pattern_df <- pattern_df %>%
+  mutate(func.name = factor(func.name, levels = facet_order))
+
+ggplot() +
+  geom_path(data=pattern_df, 
+            aes(x=true_x_norm * 3.25-0.45, y=true_y_norm * 0.3 + 0.8, alpha=tpt),
+            size=0.5) +
+  geom_point(data=pattern_df, 
+             aes(x=true_x_norm * 3.25-0.45, y=true_y_norm * 0.3 + 0.8, alpha=tpt),
+             size=0.8) +
+             
+  stat_summary(data=df_adult_filtered, aes(x=tpt, y=correct, color="Adults"), 
+              fun.data="mean_se", geom="errorbar", size=0.75, width=0.05) +
+  stat_summary(data=df_adult_filtered, aes(x=tpt, y=correct, color="Adults"), 
+              fun="mean", geom="line", alpha=0.6, size=0.6) +
+  stat_summary(data=df_adult_filtered, aes(x=tpt, y=correct, color="Adults"), 
+              fun="mean", geom="point") +
+  stat_summary(data=df_adult_filtered, aes(x=tpt, y=correct), 
+              fun="mean", geom="point", color="white", size=0.4) +
+  stat_summary(data=df_kid_3_filtered, aes(x=tpt, y=correct, color="Children (3 yo)"), 
+              fun.data="mean_se", geom="errorbar", size=0.75, width=0.05) +
+  stat_summary(data=df_kid_3_filtered, aes(x=tpt, y=correct, color="Children (3 yo)"), 
+              fun="mean", geom="line",alpha=0.6, size=0.6) +
+  stat_summary(data=df_kid_3_filtered, aes(x=tpt, y=correct, color="Children (3 yo)"), 
+              fun="mean", geom="point") +
+  stat_summary(data=df_kid_3_filtered, aes(x=tpt, y=correct), 
+              fun="mean", geom="point", color="white", size=0.4) +
+
+  stat_summary(data=df_kid_47_filtered, aes(x=tpt, y=correct, color="Children (4-7 yo)"),
+              fun.data="mean_se", geom="errorbar", size=0.75, width=0.05) +
+  stat_summary(data=df_kid_47_filtered, aes(x=tpt, y=correct, color="Children (4-7 yo)"),
+              fun="mean", geom="line", alpha=0.6, size=0.6) +
+  stat_summary(data=df_kid_47_filtered, aes(x=tpt, y=correct, color="Children (4-7 yo)"),
+              fun="mean", geom="point") +
+  stat_summary(data=df_kid_47_filtered, aes(x=tpt, y=correct),
+              fun="mean", geom="point", color="white", size=0.4) +
+    
+  stat_summary(data=df_monkey_test_filtered, aes(x=tpt, y=correct, color="Monkeys"), 
+              fun.data="mean_se", geom="errorbar", size=0.75, width=0.05) +
+  stat_summary(data=df_monkey_test_filtered, aes(x=tpt, y=correct, color="Monkeys"), 
+              fun="mean", geom="line", alpha=0.6, size=0.6) +
+  stat_summary(data=df_monkey_test_filtered, aes(x=tpt, y=correct, color="Monkeys"), 
+              fun="mean", geom="point") +
+  stat_summary(data=df_monkey_test_filtered, aes(x=tpt, y=correct), 
+              fun="mean", geom="point", color="white", size=0.4) +
+  
+  scale_color_manual(values = c("Adults" = "#59ab9d", "Children (3 yo)"="#b384ac", "Children (3-4yo)"="#b876ae","Children (4-5yo)"= "#911f6d","Children (6-7yo)" = "#75073c",
+                                  "Children (5-7yo)" = "#75073c", "Children (4-7 yo)" = "#75073c",  "Monkeys" = "#ad9e26"),
+                    breaks = c("Monkeys", "Children (3 yo)", "Children (4-7 yo)", "Adults")) +
+  guides(alpha = "none", color = guide_legend(reverse = FALSE)) +
+  paper_theme +
+  scale_y_continuous(breaks=c(0,0.5,1)) +
+  scale_alpha(range=c(0.35,1)) + 
+  coord_cartesian(xlim=c(-0.5, 14.25)) +
+  theme(legend.position = "top") + theme(strip.background=element_blank(), strip.text=element_blank(), legend.title=element_blank()) +
+  facet_wrap(~func.name, nrow=3) + 
+  labs(x = "Sequence timepoint", y = "Accuracy") 
+
+ggsave(paste0(fig_dir, "all_group_learning.png"), width=15, height=5, dpi=500)
+
+```
+# Kids-only by exact age (3–7)
+```{r, fig.width=15, fig.height=5, warning=FALSE}
+kids_by_age <- df_kid_filtered %>%
+  mutate(age_year = floor(age)) %>%
+  filter(age_year %in% 3:7) %>%
+  mutate(age_lbl = paste0(age_year, "-yo"))
+
+age_cols <- c("3-yo" = "#cd93cf", "4-yo" = "#b876ae", "5-yo" = "#911f6d",
+              "6-yo" = "#7d0a57", "7-yo" = "#540116")
+
+ggplot() +
+  geom_path(data=pattern_df, 
+            aes(x=true_x_norm * 3.25-0.45, y=true_y_norm * 0.3 + 0.8, alpha=tpt),
+            size=0.5) +
+  geom_point(data=pattern_df, 
+             aes(x=true_x_norm * 3.25-0.45, y=true_y_norm * 0.3 + 0.8, alpha=tpt),
+             size=0.8) +
+
+  stat_summary(data=kids_by_age, aes(x=tpt, y=correct, color=age_lbl, group=age_lbl),
+               fun.data="mean_se", geom="errorbar", size=0.75, width=0.05, alpha=0.9) +
+  stat_summary(data=kids_by_age, aes(x=tpt, y=correct, color=age_lbl, group=age_lbl),
+               fun="mean", geom="line", alpha=0.6, size=0.6) +
+  stat_summary(data=kids_by_age, aes(x=tpt, y=correct, color=age_lbl, group=age_lbl),
+               fun="mean", geom="point", alpha=0.7) +
+  stat_summary(data=kids_by_age, aes(x=tpt, y=correct, group=age_lbl),
+               fun="mean", geom="point", color="white", size=0.4) +
+
+  scale_color_manual(values = age_cols, breaks = names(age_cols),  name = NULL) +
+  guides(alpha = "none") +
+   paper_theme + theme(legend.position = "top") + theme(strip.background=element_blank(), strip.text=element_blank(), legend.title=element_blank()) +
+
+  scale_y_continuous(breaks=c(0,0.5,1)) +
+  scale_alpha(range=c(0.35,1)) + 
+  coord_cartesian(xlim=c(-0.5, 14.25)) +
+  theme(legend.position = "top") +
+  facet_wrap(~func.name, nrow=3) + 
+  labs(x = "Sequence timepoint", y = "Accuracy")
+
+ggsave(paste0(fig_dir, "all_kid_ages.png"), width=15, height=5, dpi=500)
+```
