--- a/paper_repo/model_based_analyses.Rmd
+++ b/paper_repo/model_based_analyses.Rmd
@@ -1067,7 +1067,7 @@ ggsave(plot=final_plot, paste0(fig_dir, "example_neurips_predictions.png"), widt
 # Generate videos
 #################
 
-# Make videos comparing single participant with single model, overlaid
+# Make videos comparing single participant with single model
 ```{r, echo=F, message=F}
 # Preprocessing
 logsumexp <- function(x) {
@@ -1164,12 +1164,15 @@ df_kid_vids <- read.csv(paste0(data_dir, "participants/kids.csv")) %>%
                rename(pred_x = response_x, pred_y = response_y, func.name = seq_id)
 df_adult_vids <- read.csv(paste0(data_dir, "participants/adults.csv")) %>%
                rename(pred_x = response_x, pred_y = response_y, func.name = seq_id)
+
+df_tpt_0 <- df_adult_vids %>%
+            filter(tpt==0) %>%
+            distinct(true_x, true_y, tpt, func.name)
+
 df_monkey_vids <- read.csv(paste0(data_dir, "participants/monkeys.csv")) %>%
                   rename(true_x=x_next, true_y=y_next, prev_x=x_curr, prev_y=y_curr, pred_x=x_pred,
-                         subject_id = monkey_name, pred_y = y_pred, func.name = func_id, tpt=n)
-
-out_folder <- "../videos/frames/"
-
+                         subject_id = monkey_name, pred_y = y_pred, func.name = func_id, tpt=n) %>%
+                
 
 model_list <- c("LoT", "Nonrecursive LoT", "GP", "Comp. GP", "Polynomial", "Linear", "Linear + Prev.", "Transformer (2)", "Transformer (3)", "Transformer (13)")
 participant_list <- c("Monkeys", "Monkey 1", "Monkey 2", "3 yos", "4 yos", "5 yos", "6 yos", "7 yos", "Adults") 
@@ -1198,95 +1201,113 @@ model_dfs <- list("LoT" = preprocess_df_model(read.csv(paste0(data_dir, "models/
 ```
 
 ```{r}
-
 make_func_vid <- function(funcname, df_participant, df_model) {
-  df_seq <- subset(df_participant, (df_participant$func.name == funcname))
-  dir.create(paste0(out_folder, "/", funcname))
-  x_min <- min(min(df_seq$true_x, na.rm=TRUE), min(df_seq$pred_x, na.rm=TRUE))
-  x_max <- max(max(df_seq$true_x, na.rm=TRUE), max(df_seq$pred_x, na.rm=TRUE))
-  y_min <- min(min(df_seq$true_y, na.rm=TRUE), min(df_seq$pred_y, na.rm=TRUE))
-  y_max <- max(max(df_seq$true_y, na.rm=TRUE), max(df_seq$pred_y, na.rm=TRUE))
-  
+  # filter once
+  df_seq <- df_participant[df_participant$func.name == funcname, ]
+  df_seq <- df_seq[order(df_seq$tpt), ]
+
+  # pre-aggregate model posterior once
+  df_model_agg <- df_model %>%
+    filter(func.name == funcname) %>%
+    group_by(tpt, pred_x, pred_y) %>%
+    summarize(posterior = sum(posterior), .groups="drop")
+
+  # ranges
+  x_min <- min(df_seq$true_x, df_seq$pred_x, na.rm=TRUE)
+  x_max <- max(df_seq$true_x, df_seq$pred_x, na.rm=TRUE)
+  y_min <- min(df_seq$true_y, df_seq$pred_y, na.rm=TRUE)
+  y_max <- max(df_seq$true_y, df_seq$pred_y, na.rm=TRUE)
+
   range_x <- (x_max-x_min)
   range_y <- (y_max-y_min)
+  shift_x <- range_x*1.5
 
-  shift_x<-range_x*1.5
+  out_dir <- file.path(out_folder, funcname)
+  dir.create(out_dir, showWarnings=FALSE, recursive=TRUE)
 
-  frame_num <- 0
-  
-  for (i in (min(df_participant$tpt)+1):max(df_participant$tpt)) {
-    df_tpt <- subset(df_seq, (df_seq$tpt == i))
-    df_hist <- df_seq[order(df_seq$tpt),] %>% filter(tpt<i)
-    
+  # open png device (auto-numbering frames)
+  png(
+    filename = file.path(out_dir, "%04d.png"),
+    width = 2000, height = 1000, res = 300, bg="white"
+  )
+
+  for (i in (min(df_seq$tpt)+1):max(df_seq$tpt)) {
+    df_tpt <- df_seq[df_seq$tpt == i, ]
+    df_hist <- df_seq[df_seq$tpt < i, ]
+
+    # base plot
     p1 <- ggplot() +
-          # prev points and path
-          geom_path(data=df_hist, aes(x=true_x, y=true_y), linewidth=0.25, linetype="dotted") +
-          geom_point(data=df_hist%>%filter(tpt==max(tpt)), aes(x=true_x, y=true_y, color="agent1"), size=1) +
-          geom_point(data=df_hist%>%filter(tpt==max(tpt)), aes(x=true_x, y=true_y, color="agent2"), size=1) +
-          geom_point(data=df_hist, aes(x=true_x, y=true_y), size=3) +
-          # shifted
-          geom_path(data=df_hist, aes(x=true_x+shift_x, y=true_y), linewidth=0.25, linetype="dotted") +
-          geom_point(data=df_hist%>%filter(tpt==max(tpt)), aes(x=true_x+shift_x, y=true_y, color="agent1"), size=1) +
-          geom_point(data=df_hist%>%filter(tpt==max(tpt)), aes(x=true_x+shift_x, y=true_y, color="agent2"), size=1) +
-          geom_point(data=df_hist, aes(x=true_x+shift_x, y=true_y), size=3) +
-          # formatting
-          scale_color_manual(labels = c("agent1"=agent1, "agent2"=agent2),
-                            values=c("agent1"="maroon", "agent2"="#516797"),
-                            breaks = c("agent1", "agent2")) +
-          coord_equal(xlim=c(x_min-range_x*.2, x_min+(range_x*2.7)),
-                      ylim=c(y_min-(range_y*.2), y_min+(range_y*1.2))) +
-          theme_void() +
-          theme(panel.background = element_rect(fill = "white"),
-                #legend.background = element_rect(fill = "white", color=NA),
-                legend.text=element_text(size=18, margin = margin(r = 20, l=10)),
-                legend.title=element_blank(),
-                legend.spacing.y = unit(2, "lines"),
-                legend.position = "top") +
-          guides(alpha="none",
-                 size="none",
-                 fill="none",
-                 color = guide_legend(override.aes = list(size = 5)))
-    
-    p2 <- p1 +
-            # next true point
-            geom_point(data=df_tpt, aes(x=true_x, y=true_y), color="gold", shape=8, size=4, stroke=2.0) +
-            geom_point(data=df_tpt, aes(x=true_x+shift_x, y=true_y), color="gold", shape=8, size=4, stroke=2.0)
-          
-    df_model_tpt <- df_model %>%
-                    filter(tpt==i) %>%
-                    filter(func.name==funcname) %>%
-                    group_by(pred_x, pred_y) %>%
-                    summarize(posterior=sum(posterior))
-    
-    if (i<3) {
-      p_list <- list(p1, p2)
-    } else {
-      p3 <- p2 +
-              # model predictions
-              geom_point(data=df_model_tpt,
-                         aes(x=pred_x+shift_x, y=pred_y, alpha=log(posterior), color="agent2"),
-                         size=2, stroke=1) +
-              # participant predictions
-              geom_point(data=df_tpt, aes(x=pred_x, y=pred_y, color="agent1"), size=2, stroke=1, alpha=0.7)
-      p_list <- list(p1, p2, p3, p3, p3)
-    } 
-    for (p in p_list) {
-      f_name <- paste0(out_folder, funcname, "/", frame_num, ".png")
-      frame_num <- frame_num + 1 
-      ggsave(f_name, plot=p, width=10,height=5, dpi=500, bg="white")
-    }
-    
-  }
-}
+      geom_path(data=df_hist, aes(x=true_x, y=true_y),
+                linewidth=0.25, linetype="dotted") +
+      geom_point(data=df_hist[df_hist$tpt==max(df_hist$tpt),],
+                 aes(x=true_x, y=true_y, color="agent1"), size=1) +
+      geom_point(data=df_hist[df_hist$tpt==max(df_hist$tpt),],
+                 aes(x=true_x, y=true_y, color="agent2"), size=1) +
+      geom_point(data=df_hist, aes(x=true_x, y=true_y), size=3) +
+      # shifted
+      geom_path(data=df_hist, aes(x=true_x+shift_x, y=true_y),
+                linewidth=0.25, linetype="dotted") +
+        geom_point(data=df_hist[df_hist$tpt==max(df_hist$tpt),],
+                 aes(x=true_x+shift_x, y=true_y, color="agent1"), size=1) +
+      geom_point(data=df_hist[df_hist$tpt==max(df_hist$tpt),],
+                 aes(x=true_x+shift_x, y=true_y, color="agent2"), size=1) +
+      geom_point(data=df_hist, aes(x=true_x+shift_x, y=true_y), size=3) +
+      scale_color_manual(
+        labels = c("agent1"=agent1, "agent2"=agent2),
+        values=c("agent1"="maroon", "agent2"="#516797"),
+        breaks = c("agent1","agent2")
+      ) +
+      coord_equal(
+        xlim=c(x_min-range_x*.2, x_min+(range_x*2.7)),
+        ylim=c(y_min-(range_y*.2), y_min+(range_y*1.2))
+      ) +
+      theme_void() +
+      theme(
+        panel.background = element_rect(fill="white"),
+        legend.text=element_text(size=14, margin = margin(r=20, l=10)),
+        legend.title=element_blank(),
+        legend.spacing.y=unit(2,"lines"),
+        legend.position="top"
+      ) +
+      guides(alpha="none", size="none", fill="none",
+             color=guide_legend(override.aes=list(size=5)))
 
+    # add next true point
+    p2 <- p1 +
+      geom_point(data=df_tpt, aes(x=true_x, y=true_y),
+                 color="gold", shape=8, size=3, stroke=2.0) +
+      geom_point(data=df_tpt, aes(x=true_x+shift_x, y=true_y),
+                 color="gold", shape=8, size=3, stroke=2.0)
+
+    if (i < 3) {
+      print(p1)
+      print(p2)
+    } else {
+      df_model_tpt <- df_model_agg[df_model_agg$tpt == i, ]
+      p3 <- p2 +
+        geom_point(data=df_model_tpt,
+                   aes(x=pred_x+shift_x, y=pred_y,
+                       alpha=log(posterior), color="agent2"),
+                   size=2, stroke=1) +
+        geom_point(data=df_tpt,
+                   aes(x=pred_x, y=pred_y, color="agent1"),
+                   size=2, stroke=1, alpha=0.7)
+      print(p1)
+      print(p2)
+      print(p3); print(p3)
+    }
+  }
+
+  dev.off() 
+}
 
 for (i in (1:length(model_list))) {
   agent2 <- model_list[i]
-  df_model <- model_dfs[[agent2]]
+  df_model <- model_dfs[[agent2]] %>% mutate(pred_y=-pred_y, true_y=-true_y)
   for (j in (1:length(participant_list))) {
     agent1 <- participant_list[j]
-    df_participant <- participant_dfs[[agent1]]
-    out_folder <- paste0("../videos/frames/", gsub(" ", "_", agent1), "_", gsub(" ", "_", agent2), "/")
+    df_participant <- participant_dfs[[agent1]] %>% mutate(pred_y=-pred_y, true_y=-true_y)
+    out_folder <- paste0("../../videos/frames/", gsub(" ", "_", agent1), "_", gsub(" ", "_", agent2), "/")
 
     unlink(out_folder, recursive=TRUE)
     dir.create(out_folder)
@@ -1297,6 +1318,7 @@ for (i in (1:length(model_list))) {
     }
   }
 }
+
 ```
 
 
